--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -454,31 +454,29 @@ jobs:
         run: |
           # set batch ID
           APPLITOOLS_BATCH_ID=${{ github.run_id }}
-
           echo "::set-env name=APPLITOOLS_BATCH_ID::${{ github.run_id }}"
-          
           echo "Setting environment variable APPLITOOLS_BATCH_ID: $APPLITOOLS_BATCH_ID"
 
           # set batch name
           APPLITOOLS_BATCH_NAME="GitHub Actions / ${{ github.workflow }}"
-
           echo "::set-env name=APPLITOOLS_BATCH_NAME::GitHub Actions / ${{ github.workflow }}"
-          
           echo "Setting environment variable APPLITOOLS_BATCH_NAME: $APPLITOOLS_BATCH_NAME"
 
           # set server url
           APPLITOOLS_SERVER_URL="https://eyes.applitools.com"
-
           echo "::set-env name=APPLITOOLS_SERVER_URL::https://eyes.applitools.com"
-          
           echo "Setting environment variable APPLITOOLS_SERVER_URL: $APPLITOOLS_SERVER_URL"
 
           # set batch sequence
           APPLITOOLS_BATCH_SEQUENCE="GitHub Actions / ${{ github.workflow }}"
-
           echo "::set-env name=APPLITOOLS_BATCH_SEQUENCE::GitHub Actions / ${{ github.workflow }}"
-          
           echo "Setting environment variable APPLITOOLS_BATCH_SEQUENCE: $APPLITOOLS_BATCH_SEQUENCE"
+
+          TEST_START_PAGE_test=https://$hostname
+
+          echo "::set-env name=TEST_START_PAGE_TEST::$TEST_START_PAGE_test"
+
+          echo "Setting environment variable TEST_START_PAGE_TEST: $TEST_START_PAGE_test"
       
       - uses: actions/setup-java@v1
         with:
