--- a/visual_tests/pom.xml
+++ b/visual_tests/pom.xml
@@ -41,7 +41,13 @@
 			<artifactId>selenium-server</artifactId>
 			<version>3.11.0</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-remote-driver</artifactId>
+			<version>2.44.0</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
