--- a/codefresh.yml
+++ b/codefresh.yml
@@ -127,7 +127,7 @@ steps:
 
           # --- JFrog Collect Build Info to Artifactory
               jfrog rt build-collect-env ${{CF_REPO_NAME}}-2020 ${{CF_BUILD_ID}}
-              
+
               jfrog rt build-add-git ${{CF_REPO_NAME}}-2020 ${{CF_BUILD_ID}}
 
           # -- build publish
@@ -211,10 +211,10 @@ steps:
         - "ingress.hostname=${{INGRESS_HOSTNAME_DEV}}"
         - "image.repository=${{REPOSITORY}}"
         - "image.tag=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}"
-  
+
   http_check:
     image: tutum/curl
-    title: "Http check"
+    title: "Http Check"
     stage: "test"
     shell: bash
     commands:
@@ -228,39 +228,38 @@ steps:
       - attempt_counter=$(($attempt_counter+1))
       - sleep 20
       - done
-
+  
   applitools_task:
     image: tutum/curl
     title: "Applitools Build Task"
     stage: "test"
-    shell: bash
     commands:
       - export APPLITOOLS_BATCH_ID=CF-${{CF_SHORT_REVISION}}
-      - echo "Setting environment variable APPLITOOLS_BATCH_ID: $APPLITOOLS_BATCH_ID"
+      - echo "Setting environment variable APPLITOOLS_BATCH_ID - $APPLITOOLS_BATCH_ID"
       - cf_export APPLITOOLS_BATCH_ID=$APPLITOOLS_BATCH_ID
-      - APPLITOOLS_BATCH_NAME="Codefresh / ${{CF_SHORT_REVISION}}
-      - echo "Setting environment variable APPLITOOLS_BATCH_NAME: $APPLITOOLS_BATCH_NAME"
+      - APPLITOOLS_BATCH_NAME="Codefresh / ${{CF_SHORT_REVISION}}"
+      - echo "Setting environment variable APPLITOOLS_BATCH_NAME - $APPLITOOLS_BATCH_NAME"
       - cf_export APPLITOOLS_BATCH_NAME=$APPLITOOLS_BATCH_NAME
       - export APPLITOOLS_SERVER_URL="https://eyes.applitools.com"
-      - echo "Setting environment variable APPLITOOLS_SERVER_URL: $APPLITOOLS_SERVER_URL"
+      - echo "Setting environment variable APPLITOOLS_SERVER_URL - $APPLITOOLS_SERVER_URL"
       - cf_export APPLITOOLS_SERVER_URL=$APPLITOOLS_SERVER_URL
       - export APPLITOOLS_BATCH_SEQUENCE=CF-${{CF_SHORT_REVISION}}
-      - echo "Setting environment variable APPLITOOLS_BATCH_SEQUENCE: $APPLITOOLS_BATCH_SEQUENCE"
+      - echo "Setting environment variable APPLITOOLS_BATCH_SEQUENCE - $APPLITOOLS_BATCH_SEQUENCE"
       - cf_export APPLITOOLS_BATCH_SEQUENCE=$APPLITOOLS_BATCH_SEQUENCE
       - export TEST_START_PAGE=https://${{INGRESS_HOSTNAME_DEV}}
-      - echo "Setting environment variable TEST_START_PAGE_TEST: $TEST_START_PAGE"
+      - echo "Setting environment variable TEST_START_PAGE_TEST - $TEST_START_PAGE"
       - cf_export TEST_START_PAGE=$TEST_START_PAGE
-  
+    
   visual_testing:
     image: maven:3.6.3-jdk-13
     title: "Running Visual Tests"
     stage: "test"
     commands:
       - 'mvn -f visual_tests/pom.xml clean test'
-  
+
   askForPermission:
     type: pending-approval
-    stage: "test"
+    stage: "deploy"
     title: Promote to QA/Prod
 
   helm_prod:
