--- a/codefresh.yml
+++ b/codefresh.yml
@@ -219,7 +219,7 @@ steps:
     shell: bash
     command: >
       attempt_counter=0 max_attempts=5
-      until $(curl --output /dev/null --silent --head --fail https://$hostname/); do
+      until $(curl --output /dev/null --silent --head --fail https://${{INGRESS_HOSTNAME_DEV}}/); do
         if [ ${attempt_counter} -eq ${max_attempts} ];then
           echo "Max attempts reached"
           exit 1
