--- a/codefresh.yml
+++ b/codefresh.yml
@@ -217,17 +217,18 @@ steps:
     title: "Http Check"
     stage: "test"
     shell: bash
-    command: >
-      attempt_counter=0 max_attempts=5
-      until $(curl --output /dev/null --silent --head --fail https://${{INGRESS_HOSTNAME_DEV}}/); do
-        if [ ${attempt_counter} -eq ${max_attempts} ];then
-          echo "Max attempts reached"
-          exit 1
-        fi
-        printf '.'
-        attempt_counter=$(($attempt_counter+1))
-        sleep 20
-      done
+    commands:
+      - export attempt_counter=0 
+      - export max_attempts=5
+      - until $(curl --output /dev/null --silent --head --fail https://${{INGRESS_HOSTNAME_DEV}}/); do
+      - if [ ${attempt_counter} -eq ${max_attempts} ];then
+      - echo "Max attempts reached"
+      - exit 1
+      - fi
+      - printf '.'
+      - export attempt_counter=$(($attempt_counter+1))
+      - sleep 20
+      - done
   
   applitools_task:
     image: tutum/curl
