--- a/visual_tests/pom.xml
+++ b/visual_tests/pom.xml
@@ -42,6 +42,12 @@
 			<version>3.11.0</version>
 		</dependency>
 		
+		<dependency>  
+			<groupId>org.seleniumhq.selenium</groupId>  
+			<artifactId>selenium-java</artifactId>  
+			<version>3.4.0</version>  
+		</dependency>
+
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-remote-driver</artifactId>
