--- a/codefresh.yml
+++ b/codefresh.yml
@@ -221,13 +221,13 @@ steps:
     commands:
       - export attempt_counter=0 
       - export max_attempts=5
-      - until $(curl --output /dev/null --silent --head --fail https://${{INGRESS_HOSTNAME_DEV}}/); do
-      - if [ ${attempt_counter} -eq ${max_attempts} ];then
+      - "until $(curl --output /dev/null --silent --head --fail https://${{INGRESS_HOSTNAME_DEV}}/); do"
+      - "if [ ${attempt_counter} -eq ${max_attempts} ];then"
       - echo "Max attempts reached"
       - exit 1
       - fi
       - printf '.'
-      - export attempt_counter=$(($attempt_counter+1))
+      - export attempt_counter="$(($attempt_counter+1))"
       - sleep 20
       - done
   
@@ -258,6 +258,8 @@ steps:
     stage: "deploy dev"
     commands:
       - 'mvn -f visual_tests/pom.xml clean test'
+    services:
+      - selenium_hub
 
   askForPermission:
     type: pending-approval
