--- a/codefresh.yml
+++ b/codefresh.yml
@@ -221,7 +221,7 @@ steps:
     commands:
       - export attempt_counter=0
       - export export max_attempts=5
-      - until $(curl --output /dev/null --silent --head --fail https://'${{INGRESS_HOSTNAME_DEV}}'/); do if [ ${attempt_counter} -eq ${max_attempts} ];then echo "Max attempts reached"; exit 1; fi; printf '.';         attempt_counter=$(($attempt_counter+1)); sleep 20; done
+      - until $(curl --output /dev/null --silent --head --fail https://${{INGRESS_HOSTNAME_DEV}}); do if [ ${attempt_counter} -eq ${max_attempts} ];then echo "Max attempts reached"; exit 1; fi; printf '.';         attempt_counter=$(($attempt_counter+1)); sleep 20; done
   
   applitools_task:
     image: tutum/curl
