--- a/codefresh.yml
+++ b/codefresh.yml
@@ -61,6 +61,7 @@ steps:
     stage: "build"
     commands:
       - export M2_HOME=/usr/share/maven
+      - export MAVEN_OPTS="-Dmaven.repo.local=/volume/codefresh/"
       - jfrog rt config ${{JFROG_SERVER_ID}} --url=https://jfrogjd.jfrog.io/jfrogjd --user=${{JFROG_USER}} --password=${{JFROG_PASS}} --interactive=false
       - jfrog rt mvn "clean install -U -Dproject.version=${{CF_BUILD_ID}} -Dartifactory.publish.buildInfo=true" --build-name=${{CF_REPO_NAME}}-2020 --build-number=${{CF_BUILD_ID}}
       - jfrog rt build-collect-env ${{CF_REPO_NAME}}-2020 ${{CF_BUILD_ID}}
