--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -1,4 +1,9 @@
-on: [push]
+on:
+  # Trigger the workflow on push or pull request,
+  # but only for a specific branch
+  push:
+    branches:
+      - applitools
 
 name: jdk8s-full-cicd
 
