--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - applitools
+  pull_request:
+    branches:
+      - applitools
 
 name: jdk8s-full-cicd
 
@@ -486,6 +489,7 @@ jobs:
         env:
           APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY }}
           TEST_START_PAGE: https://ghchattybot-dev.k8s.az.jessicadeen.com/
+          RUNWHERE: pipeline
         run: mvn -f visual_tests/pom.xml clean test
 
       - name: "Label all pods for network policy"
