--- a/codefresh.yml
+++ b/codefresh.yml
@@ -1,8 +1,50 @@
 version: "1.0"
+services:
+  name: selenium_hub
+  composition:
+    selenium_hub:
+      image: selenium/hub:latest
+      ports:
+        - 4444
+      environment:
+        - SE_OPTS=-debug
+        - GRID_MAX_SESSION=5
+
+    chrome_node:
+      image: selenium/node-chrome:latest
+      ports:
+        - 5900
+        - 5555
+      command: bash -c "sleep 5 && /opt/bin/entry_point.sh"
+      depends_on: 
+        - selenium_hub
+      environment:
+        - HUB_HOST=selenium_hub
+        - REMOTE_HOST=http://chrome_node:5555
+        - NODE_MAX_SESSION=5
+        - NODE_MAX_INSTANCES=5
+
+    firefox_node:
+      image: selenium/node-firefox:latest
+      user: 1000:1000
+      ports:
+        - 5900
+        - 5555
+      command: bash -c "sleep 5 && /opt/bin/entry_point.sh"
+      depends_on: 
+        - selenium_hub
+      environment:
+        - HUB_HOST=selenium_hub
+        - REMOTE_HOST=http://firefox_node:5555
+        - NODE_MAX_SESSION=5
+        - NODE_MAX_INSTANCES=5
+
 stages:
   - "build"
   - "test"
-  - "deploy"
+  - "deploy dev"
+  - "deploy prod"
+
 steps:
   main_clone:
     type: "git-clone"
@@ -20,7 +62,7 @@ steps:
     commands:
       - export M2_HOME=/usr/share/maven
       - jfrog rt config ${{JFROG_SERVER_ID}} --url=https://jfrogjd.jfrog.io/jfrogjd --user=${{JFROG_USER}} --password=${{JFROG_PASS}} --interactive=false
-      - jfrog rt mvn "clean install -U -Dproject.version=${{CF_BUILD_ID}} -Dartifactory.publish.buildInfo=true" --build-name=${{CF_REPO_NAME}}-2020 --build-number=${{CF_BUILD_ID}}
+      - jfrog rt mvn "clean install -Dmaven.repo.local=/codefresh/volume/m2_repository -Dproject.version=${{CF_BUILD_ID}} -Dartifactory.publish.buildInfo=true" --build-name=${{CF_REPO_NAME}}-2020 --build-number=${{CF_BUILD_ID}}
       - jfrog rt build-collect-env ${{CF_REPO_NAME}}-2020 ${{CF_BUILD_ID}}
 
   BuildingDockerImage:
@@ -46,7 +88,7 @@ steps:
     image: devth/helm
     commands:
       - helm lint ./charts/spring-boot-websocket-chat-demo
-    stage: "test"
+    stage: "build"
 
   PackageHelmChart:
     title: helm package
@@ -86,7 +128,7 @@ steps:
 
           # --- JFrog Collect Build Info to Artifactory
               jfrog rt build-collect-env ${{CF_REPO_NAME}}-2020 ${{CF_BUILD_ID}}
-              
+
               jfrog rt build-add-git ${{CF_REPO_NAME}}-2020 ${{CF_BUILD_ID}}
 
           # -- build publish
@@ -152,16 +194,74 @@ steps:
       - curl -X POST --data-urlencode 'payload={"text":"JFrog XRay Scan Report for Codefresh Build ${{CF_BUILD_ID}}","attachments":[{"fallback":"JFrog XRay Scan Report for Codefresh Build ${{CF_BUILD_ID}}","color":"'$slackStyle'","author_link":"'$JF_XRAY_RPT'","title":"JFrog XRay Scan Report","title_link":"'$JF_XRAY_RPT'","text":"JFrog Xray Scan Report for Build ${{CF_BUILD_ID}}","fields":[{"title":"XRay Alerts","value":"'$JF_XRAY_ALERTS' alerts were generated","short":false},{"title":"Requested for","value":"Jessica Deen","short":false}],"footer":"JFrog XRay Scan Notifications","footer_icon":"https:\/\/www.clipartmax.com\/png\/middle\/69-698347_jfrog-artifactory-logo.png"}]}' ${{SLACK_WEBHOOK_URL}}
       - if [[ $JF_SCAN_FAIL == *true* ]]; then exit 1; else exit 0; fi
 
+  helm_dev:
+    type: helm
+    title: Deploy with Helm3 Dev
+    fail_fast: true
+    stage: "deploy dev"
+    arguments:
+      kube_context: jdk8s20
+      chart_name: /codefresh/volume/spring-boot-websocket-chat-demo/charts/spring-boot-websocket-chat-demo
+      release_name: cf-chattybot-dev
+      action: install
+      namespace: cf-chattybot-dev
+      helm_version: 3.0.3
+      custom_values:
+        - "buildID=${{CF_BUILD_ID}}"
+        - replicaCount=3
+        - "ingress.hostname=${{INGRESS_HOSTNAME_DEV}}"
+        - "image.repository=${{REPOSITORY}}"
+        - "image.tag=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}"
+
+  http_check:
+    image: jldeen/docker-jfrog-cli-java:1.0.4
+    title: "Http Check"
+    stage: "deploy dev"
+    shell: bash
+    commands:
+      - export attempt_counter=0
+      - export export max_attempts=5
+      - until $(curl --output /dev/null --silent --head --fail https://${{INGRESS_HOSTNAME_DEV}}); do if [ ${attempt_counter} -eq ${max_attempts} ];then echo "Max attempts reached"; exit 1; fi; printf '.';         attempt_counter=$(($attempt_counter+1)); sleep 20; done
+  
+  applitools_task:
+    image: tutum/curl
+    title: "Applitools Build Task"
+    stage: "deploy dev"
+    commands:
+      - export APPLITOOLS_BATCH_ID=CF-${{CF_SHORT_REVISION}}
+      - echo "Setting environment variable APPLITOOLS_BATCH_ID - $APPLITOOLS_BATCH_ID"
+      - cf_export APPLITOOLS_BATCH_ID=$APPLITOOLS_BATCH_ID
+      - APPLITOOLS_BATCH_NAME="Codefresh / ${{CF_SHORT_REVISION}}"
+      - echo "Setting environment variable APPLITOOLS_BATCH_NAME - $APPLITOOLS_BATCH_NAME"
+      - cf_export APPLITOOLS_BATCH_NAME=$APPLITOOLS_BATCH_NAME
+      - export APPLITOOLS_SERVER_URL="https://eyes.applitools.com"
+      - echo "Setting environment variable APPLITOOLS_SERVER_URL - $APPLITOOLS_SERVER_URL"
+      - cf_export APPLITOOLS_SERVER_URL=$APPLITOOLS_SERVER_URL
+      - export APPLITOOLS_BATCH_SEQUENCE=CF-${{CF_SHORT_REVISION}}
+      - echo "Setting environment variable APPLITOOLS_BATCH_SEQUENCE - $APPLITOOLS_BATCH_SEQUENCE"
+      - cf_export APPLITOOLS_BATCH_SEQUENCE=$APPLITOOLS_BATCH_SEQUENCE
+    
+  visual_testing:
+    image: maven:3.6.3-jdk-13
+    title: "Running Visual Tests"
+    stage: "deploy dev"   
+    commands:
+      - export RUNWHERE=container
+      - export TEST_START_PAGE=https://${{INGRESS_HOSTNAME_DEV}}
+      - 'mvn -Dmaven.repo.local=/codefresh/volume/m2_repository -f visual_tests/pom.xml clean test'
+    services:
+      - selenium_hub
+
   askForPermission:
     type: pending-approval
-    stage: "test"
+    stage: "deploy dev"
     title: Promote to QA/Prod
 
-  helm:
+  helm_prod:
     type: helm
     title: Deploy with Helm3
     fail_fast: true
-    stage: "deploy"
+    stage: "deploy prod"
     when:
       steps:
         - name: askForPermission
@@ -182,7 +282,7 @@ steps:
         - "image.tag=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}"
   notes:
     image: alpine:3.11.3
-    stage: "deploy"
+    stage: "deploy prod"
     commands:
       - echo "Your application can be viewed at ${{INGRESS_HOSTNAME}}."
     on_success:
