--- a/visual_tests/pom.xml
+++ b/visual_tests/pom.xml
@@ -41,7 +41,13 @@
 			<artifactId>selenium-server</artifactId>
 			<version>3.11.0</version>
 		</dependency>
-
+		
+		<dependency>  
+			<groupId>org.seleniumhq.selenium</groupId>  
+			<artifactId>selenium-java</artifactId>  
+			<version>3.4.0</version>  
+		</dependency>
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
