--- a/codefresh.yml
+++ b/codefresh.yml
@@ -52,7 +52,6 @@ steps:
     description: "Cloning main repository..."
     repo: "jldeen/spring-boot-websocket-chat-demo"
     revision: "${{CF_BRANCH}}"
-    stage: "build"
 
   jFrogMavenBuild:
     title: Use Jfrog special build to make jar
@@ -193,15 +192,31 @@ steps:
       - echo "'$JF_SCAN_FAIL'"
       - curl -X POST --data-urlencode 'payload={"text":"JFrog XRay Scan Report for Codefresh Build ${{CF_BUILD_ID}}","attachments":[{"fallback":"JFrog XRay Scan Report for Codefresh Build ${{CF_BUILD_ID}}","color":"'$slackStyle'","author_link":"'$JF_XRAY_RPT'","title":"JFrog XRay Scan Report","title_link":"'$JF_XRAY_RPT'","text":"JFrog Xray Scan Report for Build ${{CF_BUILD_ID}}","fields":[{"title":"XRay Alerts","value":"'$JF_XRAY_ALERTS' alerts were generated","short":false},{"title":"Requested for","value":"Jessica Deen","short":false}],"footer":"JFrog XRay Scan Notifications","footer_icon":"https:\/\/www.clipartmax.com\/png\/middle\/69-698347_jfrog-artifactory-logo.png"}]}' ${{SLACK_WEBHOOK_URL}}
       - if [[ $JF_SCAN_FAIL == *true* ]]; then exit 1; else exit 0; fi
+  
+  helm_dev1:
+  title: Deploy to Dev with Helm3
+  fail_fast: true
+  stage: "deploy dev"
+  image: codefresh/cfstep-helm:3.0.3
+  environment:
+    - CHART_REF=$PACKAGE
+    - RELEASE_NAME=cf-chattybot-dev
+    - KUBE_CONTEXT=jdk8s20
+    - NAMESPACE=cf-chattybot-dev
+    - ACTION=install
+    - VALUE_buildID=${{CF_BUILD_ID}}
+    - VALUE_ingress_hostname=${{INGRESS_HOSTNAME_DEV}}
+    - VALUE_image_repository=${{REPOSITORY}}
+    - VALUE_image_tag=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
 
-  helm_dev:
+  helm_dev2:
     type: helm
     title: Deploy with Helm3 Dev
     fail_fast: true
     stage: "deploy dev"
     arguments:
       kube_context: jdk8s20
-      chart_name: spring-boot-websocket-chat-demo/charts/spring-boot-websocket-chat-demo
+      chart_name: /codefresh/volume/spring-boot-websocket-chat-demo/charts/spring-boot-websocket-chat-demo
       release_name: cf-chattybot-dev
       action: install
       namespace: cf-chattybot-dev
