--- a/codefresh.yml
+++ b/codefresh.yml
@@ -193,7 +193,7 @@ steps:
       - curl -X POST --data-urlencode 'payload={"text":"JFrog XRay Scan Report for Codefresh Build ${{CF_BUILD_ID}}","attachments":[{"fallback":"JFrog XRay Scan Report for Codefresh Build ${{CF_BUILD_ID}}","color":"'$slackStyle'","author_link":"'$JF_XRAY_RPT'","title":"JFrog XRay Scan Report","title_link":"'$JF_XRAY_RPT'","text":"JFrog Xray Scan Report for Build ${{CF_BUILD_ID}}","fields":[{"title":"XRay Alerts","value":"'$JF_XRAY_ALERTS' alerts were generated","short":false},{"title":"Requested for","value":"Jessica Deen","short":false}],"footer":"JFrog XRay Scan Notifications","footer_icon":"https:\/\/www.clipartmax.com\/png\/middle\/69-698347_jfrog-artifactory-logo.png"}]}' ${{SLACK_WEBHOOK_URL}}
       - if [[ $JF_SCAN_FAIL == *true* ]]; then exit 1; else exit 0; fi
   
-  helm_dev1:
+  helm_dev:
     title: Deploy to Dev with Helm3
     fail_fast: true
     stage: "deploy dev"
@@ -208,24 +208,6 @@ steps:
       - VALUE_ingress_hostname=${{INGRESS_HOSTNAME_DEV}}
       - VALUE_image_repository=${{REPOSITORY}}
       - VALUE_image_tag=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
-
-  helm_dev2:
-    type: helm
-    title: Deploy with Helm3 Dev
-    fail_fast: true
-    stage: "deploy dev"
-    arguments:
-      kube_context: jdk8s20
-      chart_name: /codefresh/volume/spring-boot-websocket-chat-demo/charts/spring-boot-websocket-chat-demo
-      release_name: cf-chattybot-dev
-      action: install
-      namespace: cf-chattybot-dev
-      helm_version: 3.0.3
-      custom_values:
-        - "buildID=${{CF_BUILD_ID}}"
-        - "ingress.hostname=${{INGRESS_HOSTNAME_DEV}}"
-        - "image.repository=${{REPOSITORY}}"
-        - "image.tag=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}"
 
   http_check:
     image: jldeen/docker-jfrog-cli-java:1.0.4
@@ -272,28 +254,26 @@ steps:
     title: Promote to QA/Prod
 
   helm_prod:
-    type: helm
-    title: Deploy with Helm3
+    title: Deploy to Prod with Helm3
     fail_fast: true
     stage: "deploy prod"
+    image: codefresh/cfstep-helm:3.0.3
     when:
       steps:
         - name: askForPermission
           on:
             - approved
-    arguments:
-      kube_context: jdk8s20
-      chart_name: /codefresh/volume/spring-boot-websocket-chat-demo/charts/spring-boot-websocket-chat-demo
-      release_name: cf-chattybot1
-      action: install
-      namespace: cf-chattybot
-      helm_version: 3.0.3
-      custom_values:
-        - "buildID=${{CF_BUILD_ID}}"
-        - replicaCount=3
-        - "ingress.hostname=${{INGRESS_HOSTNAME}}"
-        - "image.repository=${{REPOSITORY}}"
-        - "image.tag=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}"
+    environment:
+      - CHART_REF=$PACKAGE
+      - RELEASE_NAME=cf-chattybot1
+      - KUBE_CONTEXT=jdk8s20
+      - NAMESPACE=cf-chattybot
+      - ACTION=install
+      - VALUE_buildID=${{CF_BUILD_ID}}
+      - VALUE_ingress_hostname=${{INGRESS_HOSTNAME}}
+      - VALUE_image_repository=${{REPOSITORY}}
+      - VALUE_image_tag=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
+
   notes:
     image: alpine:3.11.3
     stage: "deploy prod"
