Revert "Merge branch 'applitools' into applitools"
This reverts commit 61eca1983a41fd5b9fc3628c42a7e5911a42f325, reversing
changes made to d50e8ab708c6abb3009fe48371710092818edf59.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -186,7 +186,16 @@ stages:
                         sleep 20
                     done
                   displayName: HTTP Check
-              
+
+                # - bash: |
+                #     ## testing env variable
+                #     echo "Applitools key in environment variable"
+                #     echo $APPLITOOLS_API_KEY
+                #     mvn -f visual_tests/pom.xml clean test
+                #   displayName: "Visual Testing"
+                #   env:
+                #     APPLITOOLS_API_KEY: $(APPLITOOLS_API_KEY)
+                
                 - task: ApplitoolsBuildTask@0
                 
                 - task: Maven@3
