--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -141,14 +141,22 @@ jobs:
 
       - name: "Jetstack Cert Manager Config"
         run: |
-          kubectl apply --validate=false \
-          -f https://raw.githubusercontent.com/jetstack/cert-manager/release-0.13/deploy/manifests/00-crds.yaml
+          helm ls -n cert-manager | grep "cert-mgr" > /dev/null
+          result=$?
+          if [ $result -eq 0 ] ; then
+            echo "Cert manager is already installed."
+          else
+            echo "Cert manager is not installed. Installing now."
 
-          helm repo add jetstack https://charts.jetstack.io
+            kubectl apply --validate=false \
+            -f https://raw.githubusercontent.com/jetstack/cert-manager/release-0.13/deploy/manifests/00-crds.yaml
 
-          helm upgrade --install cert-mgr --namespace cert-manager jetstack/cert-manager --set ingressShim.defaultIssuerName=letsencrypt-prod --set ingressShim.defaultIssuerKind=ClusterIssuer
+            helm repo add jetstack https://charts.jetstack.io
 
-          kubectl apply -f IaC/cluster-issuer.yaml
+            helm upgrade --install cert-mgr --namespace cert-manager jetstack/cert-manager --set ingressShim.defaultIssuerName=letsencrypt-prod --set ingressShim.defaultIssuerKind=ClusterIssuer
+
+            kubectl apply -f IaC/cluster-issuer.yaml
+          fi
 
       - name: "Create jfrog-dev namespace/secret"
         env:
@@ -473,10 +481,10 @@ jobs:
           echo "::set-env name=APPLITOOLS_BATCH_SEQUENCE::$APPLITOOLS_BATCH_SEQUENCE"
           echo "Setting environment variable APPLITOOLS_BATCH_SEQUENCE: $APPLITOOLS_BATCH_SEQUENCE"
 
-          # set test start page
-          TEST_START_PAGE=https://$hostname
-          echo "::set-env name=TEST_START_PAGE::$TEST_START_PAGE"
-          echo "Setting environment variable TEST_START_PAGE_TEST: $TEST_START_PAGE"
+          # # set test start page
+          # TEST_START_PAGE=https://$hostname
+          # echo "::set-env name=TEST_START_PAGE::$TEST_START_PAGE"
+          # echo "Setting environment variable TEST_START_PAGE_TEST: $TEST_START_PAGE"
       
       - name: "Set JDK version"
         uses: actions/setup-java@v1
@@ -488,7 +496,7 @@ jobs:
       - name: "Visual Testing"
         env:
           APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY }}
-          TEST_START_PAGE: https://ghchattybot-dev.k8s.az.jessicadeen.com/
+          TEST_START_PAGE: https://$hostname
           RUNWHERE: pipeline
         run: mvn -f visual_tests/pom.xml clean test
 
