--- a/.github/workflows/jdk8s-cicd.yaml
+++ b/.github/workflows/jdk8s-cicd.yaml
@@ -443,67 +443,66 @@ jobs:
           # spring deploy
           helm upgrade --install chattybot-dev $GITHUB_WORKSPACE/spring-boot-websocket-chat-demo-v0.1.0.tgz --namespace=$nameSpace --set ingress.hostname=$hostname --set image.repository=$artDockerURL/$GITHUB_REPOSITORY --set image.tag=$GITHUB_SHA --set buildID=$GITHUB_RUN_ID
 
-      - name: http check
-        run: |
-          attempt_counter=0
-          max_attempts=5
+      # - name: http check
+      #   run: |
+      #     attempt_counter=0
+      #     max_attempts=5
 
-          until $(curl --output /dev/null --silent --head --fail https://$hostname/); do
-              if [ ${attempt_counter} -eq ${max_attempts} ];then
-                echo "Max attempts reached"
-                exit 1
-              fi
+      #     until $(curl --output /dev/null --silent --head --fail https://$hostname/); do
+      #         if [ ${attempt_counter} -eq ${max_attempts} ];then
+      #           echo "Max attempts reached"
+      #           exit 1
+      #         fi
 
-              printf '.'
-              attempt_counter=$(($attempt_counter+1))
-              sleep 20
-          done
+      #         printf '.'
+      #         attempt_counter=$(($attempt_counter+1))
+      #         sleep 20
+      #     done
 
-      - name: Applitools Build Task
-        run: |
-          # set batch ID
-          APPLITOOLS_BATCH_ID=${{ github.run_id }}
-          echo "::set-env name=APPLITOOLS_BATCH_ID::$APPLITOOLS_BATCH_ID"
-          echo "Setting environment variable APPLITOOLS_BATCH_ID: $APPLITOOLS_BATCH_ID"
+      # - name: Applitools Build Task
+      #   run: |
+      #     # set batch ID
+      #     APPLITOOLS_BATCH_ID=${{ github.run_id }}
+      #     echo "::set-env name=APPLITOOLS_BATCH_ID::$APPLITOOLS_BATCH_ID"
+      #     echo "Setting environment variable APPLITOOLS_BATCH_ID: $APPLITOOLS_BATCH_ID"
 
-          # set batch name
-          APPLITOOLS_BATCH_NAME="GitHub Actions / ${{ github.workflow }}"
-          echo "::set-env name=APPLITOOLS_BATCH_NAME::$APPLITOOLS_BATCH_NAME"
-          echo "Setting environment variable APPLITOOLS_BATCH_NAME: $APPLITOOLS_BATCH_NAME"
+      #     # set batch name
+      #     APPLITOOLS_BATCH_NAME="GitHub Actions / ${{ github.workflow }}"
+      #     echo "::set-env name=APPLITOOLS_BATCH_NAME::$APPLITOOLS_BATCH_NAME"
+      #     echo "Setting environment variable APPLITOOLS_BATCH_NAME: $APPLITOOLS_BATCH_NAME"
 
-          # set server url
-          APPLITOOLS_SERVER_URL="https://eyes.applitools.com"
-          echo "::set-env name=APPLITOOLS_SERVER_URL::$APPLITOOLS_SERVER_URL"
-          echo "Setting environment variable APPLITOOLS_SERVER_URL: $APPLITOOLS_SERVER_URL"
+      #     # set server url
+      #     APPLITOOLS_SERVER_URL="https://eyes.applitools.com"
+      #     echo "::set-env name=APPLITOOLS_SERVER_URL::$APPLITOOLS_SERVER_URL"
+      #     echo "Setting environment variable APPLITOOLS_SERVER_URL: $APPLITOOLS_SERVER_URL"
 
-          # set batch sequence
-          APPLITOOLS_BATCH_SEQUENCE="GitHub Actions / ${{ github.workflow }}"
-          echo "::set-env name=APPLITOOLS_BATCH_SEQUENCE::$APPLITOOLS_BATCH_SEQUENCE"
-          echo "Setting environment variable APPLITOOLS_BATCH_SEQUENCE: $APPLITOOLS_BATCH_SEQUENCE"
+      #     # set batch sequence
+      #     APPLITOOLS_BATCH_SEQUENCE="GitHub Actions / ${{ github.workflow }}"
+      #     echo "::set-env name=APPLITOOLS_BATCH_SEQUENCE::$APPLITOOLS_BATCH_SEQUENCE"
+      #     echo "Setting environment variable APPLITOOLS_BATCH_SEQUENCE: $APPLITOOLS_BATCH_SEQUENCE"
 
-          # set test start page
-          TEST_START_PAGE=https://$hostname
-          echo "::set-env name=TEST_START_PAGE::$TEST_START_PAGE"
-          echo "Setting environment variable TEST_START_PAGE_TEST: $TEST_START_PAGE"
+      #     # set test start page
+      #     TEST_START_PAGE=https://$hostname
+      #     echo "::set-env name=TEST_START_PAGE::$TEST_START_PAGE"
+      #     echo "Setting environment variable TEST_START_PAGE_TEST: $TEST_START_PAGE"
       
-      - name: "Set JDK version"
-        uses: actions/setup-java@v1
-        with:
-          java-version: '13'
-          architecture: x64
-          jdkFile: /usr/lib/jvm/java-13-oracle
+      # - name: "Set JDK version"
+      #   uses: actions/setup-java@v1
+      #   with:
+      #     java-version: '13'
+      #     architecture: x64
+      #     jdkFile: /usr/lib/jvm/java-13-oracle
 
-      - name: "Visual Testing"
-        env:
-          APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY }}
-          # TEST_START_PAGE: https://${{hostname}}
-          RUNWHERE: pipeline
-        run: mvn -f visual_tests/pom.xml clean test
+      # - name: "Visual Testing"
+      #   env:
+      #     APPLITOOLS_API_KEY: ${{ secrets.APPLITOOLS_API_KEY }}
+      #     RUNWHERE: pipeline
+      #   run: mvn -f visual_tests/pom.xml clean test
 
-      - name: "Label all pods for network policy"
-        run: |
-          # add label
-          kubectl label -n $nameSpace pods --all role=spring-app-dev --overwrite=true
+      # - name: "Label all pods for network policy"
+      #   run: |
+      #     # add label
+      #     kubectl label -n $nameSpace pods --all role=spring-app-dev --overwrite=true
 
   deployMicroservicesProd:
     runs-on: self-hosted
