--- a/codefresh.yml
+++ b/codefresh.yml
@@ -209,44 +209,44 @@ steps:
       - VALUE_image_repository=${{REPOSITORY}}
       - VALUE_image_tag=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
 
-  # http_check:
-  #   image: jldeen/docker-jfrog-cli-java:1.0.4
-  #   title: "Http Check"
-  #   stage: "deploy dev"
-  #   shell: bash
-  #   commands:
-  #     - export attempt_counter=0
-  #     - export export max_attempts=5
-  #     - until $(curl --output /dev/null --silent --head --fail https://${{INGRESS_HOSTNAME_DEV}}); do if [ ${attempt_counter} -eq ${max_attempts} ];then echo "Max attempts reached"; exit 1; fi; printf '.';         attempt_counter=$(($attempt_counter+1)); sleep 20; done
+  http_check:
+    image: jldeen/docker-jfrog-cli-java:1.0.4
+    title: "Http Check"
+    stage: "deploy dev"
+    shell: bash
+    commands:
+      - export attempt_counter=0
+      - export export max_attempts=5
+      - until $(curl --output /dev/null --silent --head --fail https://${{INGRESS_HOSTNAME_DEV}}); do if [ ${attempt_counter} -eq ${max_attempts} ];then echo "Max attempts reached"; exit 1; fi; printf '.';         attempt_counter=$(($attempt_counter+1)); sleep 20; done
   
-  # applitools_task:
-  #   image: tutum/curl
-  #   title: "Applitools Build Task"
-  #   stage: "deploy dev"
-  #   commands:
-  #     - export APPLITOOLS_BATCH_ID=CF-${{CF_SHORT_REVISION}}
-  #     - echo "Setting environment variable APPLITOOLS_BATCH_ID - $APPLITOOLS_BATCH_ID"
-  #     - cf_export APPLITOOLS_BATCH_ID=$APPLITOOLS_BATCH_ID
-  #     - APPLITOOLS_BATCH_NAME="Codefresh / ${{CF_SHORT_REVISION}}"
-  #     - echo "Setting environment variable APPLITOOLS_BATCH_NAME - $APPLITOOLS_BATCH_NAME"
-  #     - cf_export APPLITOOLS_BATCH_NAME=$APPLITOOLS_BATCH_NAME
-  #     - export APPLITOOLS_SERVER_URL="https://eyes.applitools.com"
-  #     - echo "Setting environment variable APPLITOOLS_SERVER_URL - $APPLITOOLS_SERVER_URL"
-  #     - cf_export APPLITOOLS_SERVER_URL=$APPLITOOLS_SERVER_URL
-  #     - export APPLITOOLS_BATCH_SEQUENCE=CF-${{CF_SHORT_REVISION}}
-  #     - echo "Setting environment variable APPLITOOLS_BATCH_SEQUENCE - $APPLITOOLS_BATCH_SEQUENCE"
-  #     - cf_export APPLITOOLS_BATCH_SEQUENCE=$APPLITOOLS_BATCH_SEQUENCE
+  applitools_task:
+    image: tutum/curl
+    title: "Applitools Build Task"
+    stage: "deploy dev"
+    commands:
+      - export APPLITOOLS_BATCH_ID=CF-${{CF_SHORT_REVISION}}
+      - echo "Setting environment variable APPLITOOLS_BATCH_ID - $APPLITOOLS_BATCH_ID"
+      - cf_export APPLITOOLS_BATCH_ID=$APPLITOOLS_BATCH_ID
+      - APPLITOOLS_BATCH_NAME="Codefresh / ${{CF_SHORT_REVISION}}"
+      - echo "Setting environment variable APPLITOOLS_BATCH_NAME - $APPLITOOLS_BATCH_NAME"
+      - cf_export APPLITOOLS_BATCH_NAME=$APPLITOOLS_BATCH_NAME
+      - export APPLITOOLS_SERVER_URL="https://eyes.applitools.com"
+      - echo "Setting environment variable APPLITOOLS_SERVER_URL - $APPLITOOLS_SERVER_URL"
+      - cf_export APPLITOOLS_SERVER_URL=$APPLITOOLS_SERVER_URL
+      - export APPLITOOLS_BATCH_SEQUENCE=CF-${{CF_SHORT_REVISION}}
+      - echo "Setting environment variable APPLITOOLS_BATCH_SEQUENCE - $APPLITOOLS_BATCH_SEQUENCE"
+      - cf_export APPLITOOLS_BATCH_SEQUENCE=$APPLITOOLS_BATCH_SEQUENCE
     
-  # visual_testing:
-  #   image: maven:3.6.3-jdk-13
-  #   title: "Running Visual Tests"
-  #   stage: "deploy dev"   
-  #   commands:
-  #     - export RUNWHERE=container
-  #     - export TEST_START_PAGE=https://${{INGRESS_HOSTNAME_DEV}}
-  #     - 'mvn -Dmaven.repo.local=/codefresh/volume/m2_repository -f visual_tests/pom.xml clean test'
-  #   services:
-  #     - selenium_hub
+  visual_testing:
+    image: maven:3.6.3-jdk-13
+    title: "Running Visual Tests"
+    stage: "deploy dev"   
+    commands:
+      - export RUNWHERE=container
+      - export TEST_START_PAGE=https://${{INGRESS_HOSTNAME_DEV}}
+      - 'mvn -Dmaven.repo.local=/codefresh/volume/m2_repository -f visual_tests/pom.xml clean test'
+    services:
+      - selenium_hub
 
   askForPermission:
     type: pending-approval
