--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,8 @@ stages:
     jobs:
       - job: Build
         displayName: Build
-        pool: Azure Pipelines
+        pool:
+          vmImage: 'ubuntu-20.04'
         steps:
           - task: Maven@3
             inputs:
@@ -66,7 +67,8 @@ stages:
     jobs:
       - deployment: Deploy
         displayName: Deploy job
-        pool: Azure Pipelines
+        pool:
+          vmImage: 'ubuntu-20.04'
         environment: "chattybot-dev"
         strategy:
           runOnce:
@@ -141,7 +143,8 @@ stages:
     jobs:
       - deployment: Deploy
         displayName: Promote to Prod
-        pool: Azure Pipelines
+        pool:
+          vmImage: 'ubuntu-20.04'
         environment: "chattybot-prod"
         strategy:
           runOnce:
