--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -86,7 +86,9 @@ stages:
                     checkLatestHelmVersion: false
                     installKubectl: true
                     kubectlVersion: "1.17.1"
-                
+                - bash: |
+                    ls -la
+                    
                 - task: HelmDeploy@0
                   inputs:
                     connectionType: 'Azure Resource Manager'
@@ -96,7 +98,7 @@ stages:
                     namespace: 'jfrog-dev'
                     command: 'upgrade'
                     chartType: 'FilePath'
-                    chartPath: '**/.tgz'
+                    chartPath: 'spring-boot-websocket-chat-demo-v0.1.0.tgz'
                     releaseName: 'azd-chattybot'
                     overrideValues: 'image.repository=ttacrdl53e2sgw5z5i.azurecr.io/$(Build.Repository.Name),image.tag=$(Build.BuildId),ingress.hostname=$(hostname),buildID=$(Build.BuildId)'
 
