--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,7 +51,8 @@ stages:
             inputs:
               command: 'package'
               chartPath: 'charts/spring-boot-websocket-chat-demo'
-              destination: '$(Pipeline.Workspace)'
+
+          - bash: ls -la 
           
           - task: PublishPipelineArtifact@1
             inputs:
@@ -90,7 +91,7 @@ stages:
                     kubectlVersion: "1.17.1"
                 
                 - bash: ls -la 
-                
+
                 - task: HelmDeploy@0
                   inputs:
                     connectionType: 'Azure Resource Manager'
