--- a/charts/spring-boot-websocket-chat-demo/templates/deployment.yaml
+++ b/charts/spring-boot-websocket-chat-demo/templates/deployment.yaml
@@ -4,8 +4,9 @@ metadata:
   name: {{ template "fullname" . }}
   labels:
     app: {{ template "fullname" . }}
-    draft: {{ default "draft-app" .Values.draft }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+    draft: {{ default "draft-app" .Values.draft }}
+    release: {{ .Release.Name }}    
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -17,8 +18,9 @@ spec:
       annotations:
         buildID: {{ .Values.buildID | quote }}
       labels:
-        draft: {{ default "draft-app" .Values.draft }}
         app: {{ template "fullname" . }}
+        draft: {{ default "draft-app" .Values.draft }}
+        release: {{ .Release.Name }}
     spec:
       {{- if .Values.imagePullSecrets }}
       imagePullSecrets:
