--- a/IaC/cluster-issuer.yaml
+++ b/IaC/cluster-issuer.yaml
@@ -1,4 +1,4 @@
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt-prod
@@ -7,7 +7,6 @@ spec:
   acme:
     email: jessde@microsoft.com
     privateKeySecretRef:
-      key: ""
       name: letsencrypt-prod
     server: https://acme-v02.api.letsencrypt.org/directory
     # Enable the HTTP-01 challenge provider
@@ -15,3 +14,7 @@ spec:
       - http01:
           ingress:
             class: nginx
+            podTemplate:
+              spec:
+                nodeSelector:
+                  "kubernetes.io/os": linux
