--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -102,23 +102,21 @@ stages:
                     releaseName: 'azd-chattybot-dev'
                     overrideValues: 'image.repository=ttacrdl53e2sgw5z5i.azurecr.io/$(Build.Repository.Name),image.tag=$(Build.BuildId),ingress.hostname=$(hostname),buildID=$(Build.BuildId)'
                     waitForExecution: true
-
-                # - bash: |
-                #     # Run check to see when $(HOSTNAME) is available
-                #     attempt_counter=0
-                #     max_attempts=5
-
-                #     until $(curl --output /dev/null --silent --head --fail https://"$(HOSTNAME)"/); do
-                #       if [ ${attempt_counter} -eq ${max_attempts} ];then
-                #         echo "Max attempts reached"
-                #         exit 1
-                #       fi
-
-                #       printf '.'
-                #       attempt_counter=$((attempt_counter+1))
-                #       sleep 20
-                #     done
-                #   displayName: HTTP Check
+                
+                - bash: |
+                    # Run check to see when $(hostname) is available
+                    attempt_counter=0
+                    max_attempts=5
+                    until $(curl --output /dev/null --silent --head --fail https://"$(hostname)"/); do
+                        if [ ${attempt_counter} -eq ${max_attempts} ];then
+                          echo "Max attempts reached"
+                          exit 1
+                        fi
+                        printf '.'
+                        attempt_counter=$(($attempt_counter+1))
+                        sleep 20
+                    done
+                  displayName: HTTP Check
 
                 - task: ApplitoolsBuildTask@0
                   displayName: Setup Applitools Visual Testing
